--- a/style/styles.css
+++ b/style/styles.css
@@ -32,14 +32,6 @@
   color: white;
 }
 
-.centre {
-  position: absolute;
-  bottom: 1.5%;
-  left: 25%;
-  color: white;
-  opacity: 0.75;
-}
-
 #cardMaroon {
   background-color: #7a130e;
   color: white;
@@ -72,4 +64,24 @@
 #modalBodyTotal {
   background-color: gold;
   color: green;
+}
+
+@media only screen and (max-width: 650px) {
+  .centre {
+    position: absolute;
+    bottom: 1.5%;
+    left: 25%;
+    color: white;
+    opacity: 0.75;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .centre {
+    position: absolute;
+    bottom: 35%;
+    left: 40%;
+    color: white;
+    opacity: 0.75;
+  }
 }
