--- a/style/styles.css
+++ b/style/styles.css
@@ -50,10 +50,10 @@
   border: gold solid 2px;
 }
 
-#totalPerPerson {
+/* #totalPerPerson {
   background-color: gold;
   color: green;
-}
+} */
 
 #modalTotalHeader,
 #modalFooterTotal {
