Complete minus style

--- a/style/styles.css
+++ b/style/styles.css
@@ -4,6 +4,25 @@
   border: 5px solid #000000;
 }
 
+#instruction_1 {
+  color: yellow;
+}
+
+#instruction_2 {
+  color: black;
+}
+
+#instruction_3 {
+  color: white;
+}
+
+input {
+  border-radius: 5px;
+  min-width: 65%;
+  padding: 5px;
+  border: none;
+}
+
 /* Container holding the image and the text */
 .container {
   position: relative;
@@ -46,6 +65,10 @@
   color: green;
 }
 
+#todo {
+  color: red;
+}
+
 #btnCalc {
   border: gold solid 2px;
 }
@@ -66,22 +89,83 @@
   color: green;
 }
 
+ul {
+  list-style-type: none;
+}
+
+li {
+  list-style: none;
+  padding: 10px 20px;
+  margin-top: 5px;
+  color: red;
+  text-transform: capitalize;
+  font-weight: 600;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background: yellow;
+  transition: all 0.75s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5 ease;
+}
+
+li:hover {
+  background: darkgoldenrod;
+}
+
+li > button {
+  font-weight: normal;
+  background: none;
+  border: none;
+  float: right;
+  color: red;
+  font-weight: 800;
+}
+
 @media only screen and (max-width: 650px) {
-  .centre {
+  .centre_1 {
     position: absolute;
     bottom: 1.5%;
     left: 25%;
     color: white;
     opacity: 0.75;
   }
+
+  .centre_2,
+  .centre_3 {
+    position: absolute;
+    bottom: 1.5%;
+    left: 2%;
+    color: white;
+    opacity: 0.75;
+  }
 }
 
 @media only screen and (min-width: 650px) {
-  .centre {
+  .centre_1 {
     position: absolute;
     bottom: 35%;
     left: 40%;
     color: white;
+    opacity: 0.75;
+  }
+
+  .centre_2 {
+    position: absolute;
+    bottom: 65%;
+    left: 30%;
+    color: white;
+    opacity: 0.75;
+  }
+
+  .centre_3 {
+    position: absolute;
+    width: 95%;
+    top: 35%;
+    left: 2.5%;
+    color: yellow;
     opacity: 0.75;
   }
 }
